--- a/.github/workflows/python-coverage.yml
+++ b/.github/workflows/python-coverage.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run tests and generate coverage details
         run: pytest --cov=src
 
-      - name: Coverage comment
+      - name: Coverage comment2
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
@@ -40,4 +40,3 @@ jobs:
 
       - name: Fail if below threshold
         run: coverage report --fail-under=90
-          
